# mnist-1s-and-2s

./: README.md  camera.py  mnist.py  pyproject.toml
