[project]
name = "mnist-1s-and-2s"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "tensorflow (>=2.18.0,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
